# aircraft_scanning

./: .gitignore  README.md
aircraft_scanning_control/: CMakeLists.txt  package.xml
aircraft_scanning_control/config/: camera_joint_control.yaml  ugv_manipulator_control.yaml
aircraft_scanning_control/launch/: camera_joint_control.launch  team_auto_scanning.launch  uav_auto_scanning.launch  uav_camera_control.launch  uav_manual_scanning.launch  uav_scanning_data.launch  uav_scanning_image.launch  ugv_auto_scanning.launch  ugv_manipulator_control.launch  ugv_manual_scanning.launch
aircraft_scanning_control/scripts/: auto_scanning.py  camera.py  controller.py  pc_process.py  planner.py  pointcloud.py  quadrotor_camera_control.py  rs_camera.py  trajectory.py  transform.py  uav_auto_scanning.py  uav_controller.py  uav_manual_scanning.py  uav_trajectory.py  ugv_auto_scanning.py  ugv_controller.py  ugv_manual_scanning.py  ugv_trajectory.py  viewpoint.py
aircraft_scanning_data/: CMakeLists.txt  package.xml
aircraft_scanning_data/launch/: data_process.launch
aircraft_scanning_data/src/: main.cpp  viewer.cpp
aircraft_scanning_description/: CMakeLists.txt  package.xml
aircraft_scanning_gazebo/: CMakeLists.txt  package.xml
aircraft_scanning_plan/: CMakeLists.txt  package.xml
aircraft_scanning_teleop/: CMakeLists.txt  package.xml
aircraft_scanning_teleop/launch/: logitech_gamepad.launch
aircraft_scanning_teleop/src/: aircraft_scanning_teleop.cpp
aircraft_scanning_visualize/: CMakeLists.txt  package.xml
doc/: mechanical_design.md  viewpoint_generation.md
(+209 files in other folders)
